--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,18 @@
       <version>5.1.47</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.18</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>23.0</version>
+    </dependency>
+
   </dependencies>
 
   <repositories>
