--- a/pom.xml
+++ b/pom.xml
@@ -8,30 +8,35 @@
     <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-engine</artifactId>
-      <version>5.12</version>
+      <version>6.0.0</version>
     </dependency>
+
     <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-bpmn-layout</artifactId>
-      <version>5.12</version>
+      <version>6.0.0.RC1</version>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
     </dependency>
+
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>1.4.199</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy</artifactId>
@@ -55,6 +60,7 @@
       <artifactId>guava</artifactId>
       <version>23.0</version>
     </dependency>
+
 
   </dependencies>
 
